Book constructor, a test array, and a book card created in the main element: A book constructor to get information from the user and create new objects from, a test array with an object of static variables to display a test book. A function that displays the objects in the array in the main page has been added.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,14 @@ header h1{
 
 main{
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+}
+
+.card-container{
+  background-color: #D9D9D9CC;
+  padding: 20px;
+  border-radius: 20px;
 }
 
 button{
