A form dialog created to appear when button is clicked: A dialog element with a form underneath has been created, this form contains book name, author, genre(select), and pages; javascript preventDefault method in place to stop normal form behaviour.

--- a/style.css
+++ b/style.css
@@ -36,6 +36,62 @@ main{
   gap: 30px;
 }
 
+dialog{
+  height: max-content;
+  padding: 30px 40px;
+  border: none;
+  border-radius: 15px;
+}
+
+dialog::backdrop{
+  backdrop-filter: blur(5px);
+}
+
+form{
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+span[aria-label='required'] {
+  color: red;
+}
+
+input, select{
+  font-size: 18px;
+  padding: 10px;
+  border-radius: 5px;
+  width: 300px;
+}
+
+.form-row{
+display: flex;
+flex-direction: column;
+gap: 5px;
+margin-bottom: 30px;
+}
+
+#close-dialog{
+  background-color: aqua;
+  font-size: 20px;
+  padding: 15px;
+  border-radius: 30px;
+  width: 150px;
+  align-self: center;
+  cursor: pointer;
+}
+
+#close-dialog:hover{
+  border: none;
+  font-weight: bolder;
+}
+
+#close-dialog:active{
+  font-weight: bolder;
+  border: 2px solid black;
+  transition: border 0.2s ease;
+}
+
 .card-container{
   background-color: #D9D9D9CC;
   padding: 10px 20px;
@@ -48,7 +104,7 @@ main{
   gap: 5px;
 }
 
-button{
+header button{
   background-color: #fff;
   text-transform: capitalize;
   padding: 20px;
@@ -61,11 +117,11 @@ button{
   margin-right: 50px;
 }
 
-button:hover {
+header button:hover {
   border: 2px solid black;
 }
 
-button:active{
+header button:active{
   background-color: rgb(0,0,0,0.8);
   color: white;
   transition: background-color 0.2s ease, color 0.2s ease;
