--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 header{
@@ -93,15 +94,33 @@ margin-bottom: 30px;
 }
 
 .card-container{
-  background-color: #D9D9D9CC;
-  padding: 10px 20px;
-  border-radius: 20px;
+  background-color: rgba(7, 7, 7, 0.856);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  border: 4px solid rgb(255, 255, 255);
+  border-radius: 10px;
 }
 
 .card-container div {
-  display: flex;
-  align-items: center;
-  gap: 5px;
+  margin-bottom: auto;
+}
+
+.card-container p{
+  display: inline-block;
+  margin-right: 40px;
+  text-transform: uppercase;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  color: rgb(234, 218, 218);
+}
+
+.card-container span:not(.card-container span:first-child) {
+  text-transform: capitalize;
+  font-size: 22px;
+  font-family: cursive, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: rgb(204, 191, 191);
 }
 
 header button{
