--- a/style.css
+++ b/style.css
@@ -102,8 +102,16 @@ margin-bottom: 30px;
   border-radius: 10px;
 }
 
-.card-container div {
-  margin-bottom: auto;
+.card-container div:not(:first-child,:last-child){
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.card-container div:last-child {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .card-container p{
