--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ margin-bottom: 30px;
   border-radius: 30px;
   width: 150px;
   align-self: center;
+  margin-left: 30px;
   cursor: pointer;
 }
 
